--- a/public/global.css
+++ b/public/global.css
@@ -719,7 +719,8 @@ a:hover {
     text-align: justify;
     direction: rtl;
     font-weight: normal;
-    /* line-height: 27px; */
+    line-height: 27px;
+    font-size: 13.5px;
     word-spacing: -1px;
 }
 
