--- a/public/global.css
+++ b/public/global.css
@@ -2292,3 +2292,17 @@ input[type=number]:focus,
     height: 150px !important;
     text-align: right !important;
 }
+
+
+/* input type file custom */
+
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
